2007-09-24  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/yarpdev/yarphear.cpp: yarphear can now save audio from
	the network to a file, without also requiring access to the
	speakers (use --nodevice option)

2007-09-21  Giacomo Spigler  <spiglerg@gmail.com>

	* src/modules/nvidia/NVIDIADeviceDriver.cpp/.h: Added the capability to process 2 images at the same time. A possible application for this feature is, ie, motion detection (throught subtraction of subsequent frames)
	* src/libYARP_dev/include/yarp/dev/GPUInterface.h: same as above
	* example/nvidia/progs/: added a new example program, FP-motion.


2007-09-14  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_dev/src/RemoteControlBoard.cpp: checked for case
	of no axes available.

	* src/libYARP_dev/include/yarp/dev/ControlBoardInterfaces.h: added
	an IAxisInfo interface as a standard way to get the name of an axis.

	* src/libYARP_dev/src/RemoteControlBoard.cpp: added remote route
	for IAxisInfo interface.


2007-08-14  Giacomo Spigler  <spiglerg@gmail.com>

	* src/modules/nvidia/NVIDIADeviceDriver.cpp/.h: Added the capability of 
	setting non-vector arguments in an easier way
	* src/libYARP_dev/include/yarp/dev/GPUInterface.h: same as above
	* example/nvidia/progs/: added a new example program, FP-resize.


2007-08-13  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/include/yarp/ShmemCarrier.h: disabled old
	shmem class, since it interferes with compiles on certain
	Fedora machines, and should not be needed anymore.

2007-08-12  Giacomo Spigler  <spiglerg@gmail.com>

	* src/modules/nvidia/NVIDIADeviceDriver.cpp/.h: these 2 files 
	needed a little fix to allow the usage of textures containing 
	float, int, .. values. Before this fix only 0-255 values where 
	accepted.
	* src/libYARP_dev/include/yarp/dev/GPUInterface.h: this file was
	modified to introduce the new feature.

2007-08-10  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
