@@ -62,3 +62,4 @@ SOURCE DEBIAN Thu Jul 26 12:08:41 CEST 2007 (licensing scan update)
 SOURCE DEBIAN Tue Sep 25 11:46:30 CEST 2007 (try version 2.1.7)
 SOURCE DEBIAN Tue Sep 25 12:06:30 CEST 2007 (licensing fix 2.1.7)
 SOURCE DEBIAN Tue Sep 25 12:06:30 CEST 2007 (Giacomo's dates 2.1.7)
+SOURCE DEBIAN Tue Sep 25 14:46:30 CEST 2007 (copying config files 2.1.7)
